require auth and auto author id
